# profile.mobile.apps.native.ug-lockscreen-setting-efl

./: .cproject  .gitignore  .project  CMakeLists.txt  org.tizen.ug-lockscreen-options-1.0.0-arm-debug.tpk  org.tizen.ug-lockscreen-options-1.0.0-arm.tpk  org.tizen.ug-lockscreen-options-1.0.0-arm_debug.tpk  org.tizen.ug-lockscreen-options-1.0.0-i386-debug.tpk  org.tizen.ug-lockscreen-options-1.0.0-i386.tpk  org.tizen.ug-lockscreen-options-1.0.0-i386_debug.tpk  project_def.prop  tizen-manifest.xml  ug-lockscreen-options.xml
inc/: app-shortcut.h  lockscreen-options-debug.h  lockscreen-options-main.h  lockscreen-options-util.h  lockscreen-options.h
packaging/: org.tizen.ug-lockscreen-options.spec  ug-lockscreen-options.spec  ug-lockscreen-setting.spec
po/: CMakeLists.txt  ar.po  az.po  cs.po  de.po  el_GR.po  en_US.po  es_US.po  et.po  eu.po  fi.po  fr.po  ga.po  it_IT.po  ja_JP.po  ka.po  lt.po  lv.po  mk.po  nl.po  pt_BR.po  ro.po  sl.po  sr.po  uz.po  zh_CN.po  zh_TW.po
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+11 more)
src/: app-shortcut.c  lockscreen-options-main.c  lockscreen-options-util.c  lockscreen-options.c
ug-lockscreen-options/: CMakeLists.txt
ug-lockscreen-options/include/: lockscreen-options-debug.h  lockscreen-options-main.h  lockscreen-options-util.h  lockscreen-options.h
ug-lockscreen-options/src/: lockscreen-options-main.c  lockscreen-options-util.c  lockscreen-options.c
